--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                 <img id="qr-code" src="" alt="QR Code">
             </div>
             <p id="message" class="hidden">Attendance received!</p>
-            
+
+            <a href="person-detect/index.html"><button id="geolocation-container" id="epic">Iris X</button></a>
+
             <div id="geolocation-container">
                 <button id="get-location">Use Current Location</button>
                 <p id="location-status"></p>
